tests/negative/wrong_arg_count.sans
// expect-error: argument
add(a:I b:I) I = a + b
main() I {
  x = add(1 2 3)
  x
}
